force-app/main/default/objects/Case/fields/Marcin_Case_Field__c.field-meta.xml
<CustomField>
    <fullName>Marcin_Case_Field__c</fullName>
    <label>Marcin Case Field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>