force-app/main/default/objects/Case/fields/Marcin_Ola__c.field-meta.xml
<CustomField>
    <fullName>Marcin_Ola__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marcin Ola</label>
    <type>Checkbox</type>
</CustomField>