force-app/main/default/objects/Case/fields/Piotrek__c.field-meta.xml
<CustomField>
    <fullName>Piotrek__c</fullName>
    <label>Piotrek</label>
    <type>Date</type>
</CustomField>